[project]
name = "pachicounter"
version = "0.2.0"
description = ""
authors = [{ name = "Yusuke Ohshima", email = "ohshima.yusuke@yukke.org" }]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "gevent>=26",
    "orjson>=3.6",
    "pyusbio",
]

[project.scripts]
pachicounter = "pachicounter.app:main"

[tool.uv.sources]
pyusbio = { git = "https://github.com/yukkeorg/pyusbio.git" }

[tool.ty.environment]
python = ".venv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
